--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,3 +46,10 @@ body {
   padding: 2rem 3rem;
   background-color: black;
   color: white;
+}
+
+.headline h1 {
+  margin: 0.25rem 0;
+  font-size: 2rem;
+  line-height: 1.2;
+}
