--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,3 +53,20 @@ body {
   font-size: 2rem;
   line-height: 1.2;
 }
+
+/* Navigation Bar */
+nav {
+  background-color: firebrick;
+  color: white;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75rem 0;
+}
+
+.mobile-nav {
+  display: none;
+}
