Added Footer section in style.css

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -115,3 +115,12 @@ nav ul {
   background-color: black;
   color: white;
 }
+
+/* Footer */
+
+footer {
+  padding: 5rem 0;
+  margin-top: 4rem;
+  background-color: black;
+  color: white;
+}
