--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,6 +54,26 @@ body {
   line-height: 1.2;
 }
 
+@media only screen and (max-width: 470px) {
+  .main-banner {
+    height: 15rem;
+  }
+
+  .headline {
+    width: 100%;
+    padding: 1rem 2rem;
+    top: 10rem;
+  }
+
+  .headline h4 {
+    font-size: .77rem;
+  }
+
+  .headline h1 {
+    font-size: 1rem;
+  }
+}
+
 /* Navigation Bar */
 nav {
   background-color: firebrick;
@@ -71,8 +91,18 @@ nav ul {
   display: none;
 }
 
-/* Products and Business Information Section */
+@media only screen and (max-width: 1024px) {
+  nav ul {
+    display: none;
+  }
 
+  .mobile-nav {
+    display: block;
+    text-align: center;
+  }
+}
+
+/* Products and Business Information Section */
 .products,
 .business-info {
   display: flex;
@@ -116,11 +146,48 @@ nav ul {
   color: white;
 }
 
-/* Footer */
+@media only screen and (max-width: 1024px) {
+  .product {
+    width: 47%;
+  }
 
+  .product.glasses {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+
+  .products,
+  .business-info {
+    flex-wrap: wrap;
+  }
+
+  .product {
+    width: 90%;
+    margin: auto;
+  }
+
+  .product.watch {
+    display: none;
+  }
+
+  .info {
+    width: 90%;
+    margin: 0.5rem auto;
+  }
+}
+
+/* Footer */
 footer {
   padding: 5rem 0;
   margin-top: 4rem;
   background-color: black;
   color: white;
+}
+
+@media only screen and (max-width: 470px) {
+  footer {
+    text-align: center;
+  }
 }
